--- a/www/res/tabs.css
+++ b/www/res/tabs.css
@@ -85,7 +85,8 @@ div.svgview {
     margin-top: 4;
     width: 100%;
     height: 80%;
-    background-color: #7f7f7f;
+    background-color: #26292c;
+    border: 1px solid #7f7f7f;
 
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
